@@ -1,3 +1,8 @@
+2009-03-31  Andrew L Janke  <a.janke@gmail.com>
+
+ * src/shiftcolumn.c: Check if document is open
+      before doing anything (Thanks Frank)
+
 2009-03-17  Andrew L Janke  <a.janke@gmail.com>
 
  * src/shiftcolumn.c: Added VERSION instead of static string
